<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grayscale_background"
    android:padding="@dimen/medium_margin">

    <EditText
        android:id="@+id/oldPasswordText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_old_password"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textColor="@color/tv_darker"
        android:textColorHint="@color/tv_darker"
        android:layout_marginBottom="@dimen/medium_margin"
        android:background="@drawable/custom_edittext_background">
        <requestFocus />
    </EditText>
    <EditText
        android:id="@+id/newPasswordText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin"
        android:ems="10"
        android:hint="@string/hint_new_password"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textColor="@color/tv_darker"
        android:textColorHint="@color/tv_darker"
        android:background="@drawable/custom_edittext_background" />
    <EditText
        android:id="@+id/confNewPasswordText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin"
        android:ems="10"
        android:hint="@string/hint_conf_new_password"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textColor="@color/tv_darker"
        android:textColorHint="@color/tv_darker"
        android:background="@drawable/custom_edittext_background" />
    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_gradient_button_background"
        android:text="@string/label_cap_change_password"
        android:textColor="@color/tv_white"/>
</LinearLayout>