<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_product_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:singleLine="true"
        android:layout_marginRight="@dimen/narrow2_margin"
        android:layout_weight="1"
        android:id="@+id/productNameText" />

    <EditText
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_product_count"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/productCountText"
        android:layout_marginRight="@dimen/narrow2_margin"
        android:inputType="number"/>

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_product_price"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="@dimen/narrow2_margin"
        android:singleLine="true"
        android:id="@+id/productPriceText"
        android:inputType="number"/>

    <ImageView
        android:id="@+id/deleteListImage"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="center_vertical"
        android:singleLine="true"
        android:src="@drawable/delete_icon"/>

</LinearLayout>