<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:weightSum="1">

    <ImageView
            android:id="@+id/headerImage"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.7"
            android:scaleType="centerCrop"
            android:src="@drawable/header_image" />

    <RelativeLayout
            android:id="@+id/loginLayout"
            android:layout_weight="0.3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/grayscale_background"
            android:orientation="vertical" >

        <include
                android:id="@+id/footerInclude"
                layout="@layout/footer" />

        <RelativeLayout
                android:id="@+id/inputLayout"
                android:layout_alignLeft="@+id/footerInclude"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/narrow2_margin" >
                <TextView
                    android:id="@+id/loginPromptLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:gravity="center_horizontal"
                    android:text="@string/label_login_desc"
                    android:textColor="@color/tv_darker" />
                <EditText
                    android:id="@+id/loginIdText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/loginPromptLabel"
                    android:drawableLeft="@drawable/user_icon_black"
                    android:ems="10"
                    android:hint="@string/hint_loginid"
                    android:singleLine="true"
                    android:textColor="@color/tv_darker"
                    android:textColorHint="@color/tv_darker"
                    android:background="@drawable/custom_edittext_background">
                    <requestFocus />
                </EditText>
                <EditText
                    android:id="@+id/passwordText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/loginIdText"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:drawableLeft="@drawable/lock_icon_black"
                    android:ems="10"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColor="@color/tv_darker"
                    android:textColorHint="@color/tv_darker"
                    android:background="@drawable/custom_edittext_background" />

        </RelativeLayout>

        <CheckBox
            android:id="@+id/showPasswordCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/footerInclude"
            android:layout_below="@+id/inputLayout"
            android:layout_marginLeft="@dimen/medium_margin"
            android:text="@string/label_show_password"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/tv_darker"
            android:visibility="visible" />

        <TextView android:id="@+id/signupLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/footerInclude"
            android:layout_below="@+id/inputLayout"
            android:layout_marginRight="@dimen/medium_margin"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            android:paddingRight="@dimen/narrow2_margin"
            android:text="@string/label_signup"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/footerInclude"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/showPasswordCheck"
            android:layout_marginTop="@dimen/medium2_margin"
            android:orientation="vertical"
            android:padding="@dimen/narrow2_margin"
            android:weightSum="1" >
            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_gradient_button_background"
                android:text="@string/button_login"
                android:textColor="@color/tv_white"
                android:layout_marginBottom="@dimen/medium_margin" />
            <Button
                android:id="@+id/exitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_gradient_button_background"
                android:text="@string/button_exit"
                android:textColor="@color/tv_white"
                android:layout_marginBottom="@dimen/medium_margin" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>